# cs4420-fast-ddl-testbed

./: CMakeLists.txt  Goals.ods  README.md  babyDB.cpp
benchmark_output/: run.out  run1.out
benchmark_output/AmortizedAurora/: post-dll-0.out  post-dll-1.out  post-dll-10.out  post-dll-11.out  post-dll-12.out  post-dll-2.out  post-dll-3.out  post-dll-4.out  post-dll-5.out  post-dll-6.out  post-dll-7.out  post-dll-8.out  post-dll-9.out  pre-dll-0.out  pre-dll-1.out  pre-dll-2.out  pre-dll-3.out  pre-dll-4.out
benchmark_output/Aurora/: post-dll-0.out  post-dll-1.out  post-dll-10.out  post-dll-11.out  post-dll-12.out  post-dll-2.out  post-dll-3.out  post-dll-4.out  post-dll-5.out  post-dll-6.out  post-dll-7.out  post-dll-8.out  post-dll-9.out  pre-dll-0.out  pre-dll-1.out  pre-dll-2.out  pre-dll-3.out  pre-dll-4.out
benchmark_output/NaiveRandomMemory/: post-dll-0.out  post-dll-1.out  post-dll-10.out  post-dll-11.out  post-dll-12.out  post-dll-2.out  post-dll-3.out  post-dll-4.out  post-dll-5.out  post-dll-6.out  post-dll-7.out  post-dll-8.out  post-dll-9.out  pre-dll-0.out  pre-dll-1.out  pre-dll-2.out  pre-dll-3.out  pre-dll-4.out
src/: amortized_aurora_table.tpp  aurora_table.tpp  db_tuple.cpp  db_tuple.tpp  main.cpp  naive_contiguous_mem_table.tpp  naive_contiguous_mem_tuple_group.tpp  naive_random_mem_table.tpp  naive_table.cpp  naive_table.tpp  naive_tuple_group.cpp  naive_tuple_group.tpp  versioned_contiguous_mem_tuple_group.tpp
src/includes/: amortized_aurora_table.h  aurora_table.h  constants.h  constants.h.gch  db_tuple.h  db_tuple.h.gch  ddl_operable.h  dml_operable.h  naive_contiguous_mem_table.h  naive_contiguous_mem_tuple_group.h  naive_random_mem_table.h  naive_table.h  naive_tuple_group.h  testing_constants.h  version.h  versioned_contiguous_mem_tuple_group.h
src/includes/table/: amortized_aurora_table.h  aurora_table.h  naive_contiguous_mem_table.h  naive_random_mem_table.h
src/includes/tuple/: db_tuple.h
src/includes/tuple_group/: naive_contiguous_mem_tuple_group.h  versioned_contiguous_mem_tuple_group.h
src/table/: amortized_aurora_table.tpp  aurora_table.tpp  naive_contiguous_mem_table.tpp  naive_random_mem_table.tpp
src/tuple/: db_tuple.tpp
src/tuple_group/: naive_contiguous_mem_tuple_group.tpp  versioned_contiguous_mem_tuple_group.tpp
test/: CMakeLists.txt  README.md  benchmarks.cpp  testing_constants.h  testing_constants.h.gch  tests.cpp
